Conclusa implementazione gestione agente

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "stdlib.h": "c",
-        "socket.h": "c"
+        "socket.h": "c",
+        "menu_agent.h": "c"
     }
 }
